--- a/teamtrackfrontend/src/app/user-list/user-list.component.html
+++ b/teamtrackfrontend/src/app/user-list/user-list.component.html
@@ -1,4 +1,31 @@
 <div class="card my-5">
+  <button class="btn btn-primary btn-lg btn-block" (click)="addUser = !addUser"> Add user</button>
+  <div *ngIf="addUser">
+    <form>
+      <div class="form-group">
+        <label>Username</label>
+        <input 
+        class="form-control" 
+        type="text" name="username" id="username" [(ngModel)]="user.username" >
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input 
+        class="form-control" 
+        type="password" name="pass" id="pass" [(ngModel)]="user.password" >
+      </div>
+      <div class="form-group">
+        <label>Role</label>
+        <select class="form-control" id="role" [(ngModel)]="user.role" [ngModelOptions]="{standalone: true}">
+          <option>User</option>
+          <option>Admin</option>
+          <option>Project Manager</option>
+        </select>    
+        </div>
+        <button (click)="add()" 
+          class="btn btn-info">Add user</button>
+    </form>
+  </div>
     <div class="card-body">
       <table class="table table-bordered table-striped">
         <thead class="thead-dark">
@@ -10,8 +37,8 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let user of users">
-            <td>{{ user.id }}</td>
+          <tr *ngFor="let user of users; let i = index">
+            <td>{{ i+1 }}</td>
             <td>{{ user.username }}</td>
             <td>{{ user.password }}</td>
             <td>{{ user.role }}</td>
