changed-issues-view

--- a/teamtrackfrontend/src/app/user-issues/user-adding-comments/user-adding-comments.component.html
+++ b/teamtrackfrontend/src/app/user-issues/user-adding-comments/user-adding-comments.component.html
@@ -1,3 +1,5 @@
+<!-- todo: add dates(tracking time) -->
+
 <div class="buttonAdd">
   <button class="btn btn-info" (click)="onClick()">
     <span>&#43;</span> New issue
@@ -16,7 +18,7 @@
             class="form-control"
             placeholder="Enter your username"
             #userNameInput
-            (input)="isUserNameEmpty=userNameInput.value"
+            (input)="isUserNameEmpty = userNameInput.value"
             [value]="isUserNameEmpty"
           />
         </div>
@@ -31,7 +33,7 @@
             class="form-control"
             placeholder="Enter topic"
             #topicInput
-            (input)="isTopicEmpty=topicInput.value"
+            (input)="isTopicEmpty = topicInput.value"
             [value]="isTopicEmpty"
           />
         </div>
@@ -41,16 +43,17 @@
       <div class="col-md-6 text-center">
         <div class="form-group text-center">
           <label [hidden]="!notVisible" for="prio">Priority</label>
-          <select class="form-control"
-          [hidden]="!notVisible"
-          #selectedPrio
-          (input)="selectedOption=selectedPrio.value"
-          [value]="selectedOption">
+          <select
+            class="form-control"
+            [hidden]="!notVisible"
+            #selectedPrio
+            (input)="selectedOption = selectedPrio.value"
+            [value]="selectedOption"
+          >
             <option value="">--select priority--</option>
             <option value="High">High</option>
             <option value="Medium">Medium</option>
             <option value="Low">Low</option>
-
           </select>
         </div>
       </div>
@@ -66,7 +69,7 @@
             rows="3"
             placeholder="Type your comment here"
             #contentInput
-            (input)="isContentEmpty=contentInput.value"
+            (input)="isContentEmpty = contentInput.value"
             [value]="isContentEmpty"
           ></textarea>
         </div>
@@ -74,11 +77,18 @@
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
-        <button [hidden]="!notVisible"
-        [disabled]="!isUserNameEmpty || !isTopicEmpty || !selectedOption || !isContentEmpty"
-        type="submit"
-        class="btn btn-aqua"
-        (click)="onAddIssue()">
+        <button
+          [hidden]="!notVisible"
+          [disabled]="
+            !isUserNameEmpty ||
+            !isTopicEmpty ||
+            !selectedOption ||
+            !isContentEmpty
+          "
+          type="submit"
+          class="btn btn-aqua"
+          (click)="onAddIssue()"
+        >
           Submit
         </button>
       </div>
