popraw backend'u podpięcie z frontem  Wymaga poprawek
popraw backend'u podpięcie z frontem
Wymaga poprawek

--- a/teamtrackfrontend/src/app/user-issues/user-comments-list/user-comments/user-comments.component.html
+++ b/teamtrackfrontend/src/app/user-issues/user-comments-list/user-comments/user-comments.component.html
@@ -3,15 +3,15 @@
     <table class="list-group-item-heading">
       <th>User:</th>
       {{
-        comment.userName
+        comment.user.username
       }}
       <th><span> | </span> Topic: <span> </span></th>
       {{
-        comment.topic
+        comment.description
       }}
       <th><span> | </span>Prio: <span> </span></th>
       {{
-        comment.prio
+        comment.status
       }}
     </table>
   </div>
