--- a/teamtrackfrontend/src/app/user-issues/comments-details/comments-details.component.html
+++ b/teamtrackfrontend/src/app/user-issues/comments-details/comments-details.component.html
@@ -1,11 +1,11 @@
 <div class="userName row">
   <div class="col-xs-12">
-    <p>Creator: {{ comment.userName }}</p>
+    <p>Creator: {{ comment.user.username }}</p>
   </div>
 </div>
 <div class="topic row">
   <div class="col-xs-12">
-    <label for="">Topic: {{ comment.topic }}</label>
+    <label for="">Topic: {{ comment.description }}</label>
   </div>
 </div>
 <div class="comment row">
@@ -15,7 +15,7 @@
       cols="60"
       style="padding: 12px; margin: 10px"
       readonly
-      >{{ comment.content }}</textarea
+      >{{ comment.description }}</textarea
     >
   </div>
 </div>
