--- a/teamtrackfrontend/src/app/user-projects/user-projects-list/user-project/user-project.component.html
+++ b/teamtrackfrontend/src/app/user-projects/user-projects-list/user-project/user-project.component.html
@@ -1,12 +1,12 @@
-<a routerLink="/projects" class="list-group-item clearfix" (click)="onSelected()">
-  <div class="pull-left">
+<div class="card center" style="height:5rem" (click)="onSelected()">
+  <div class="pull-left"  >
     <h4 class="list-group-item-heading">
        {{ project.project_name }}
     </h4>
   </div>
 <p class="contentDisplayed" *ngIf="isSelected">{{ project.description }} | Date of creation: {{ project.created_at | date }}
   <button class="btn-danger"
-  routerLink="/issues">More</button>
+  (click)="goToMore()">More</button>
 </p>
+</div>
 
-</a>
