--- a/teamtrackfrontend/src/app/user-projects/user-projects.component.html
+++ b/teamtrackfrontend/src/app/user-projects/user-projects.component.html
@@ -7,6 +7,8 @@
 </div>
 <div class="row text-center">
   <div class="col">
-    <app-user-projects-list></app-user-projects-list>
+    <app-user-projects-list
+    (projWasSelected)="outputProject($event)"
+    ></app-user-projects-list>
   </div>
 </div>
