add comments i timetable components to backend

--- a/teamtrackfrontend/src/app/user-issues/comments-details/comments-details.component.html
+++ b/teamtrackfrontend/src/app/user-issues/comments-details/comments-details.component.html
@@ -1,11 +1,11 @@
 <div class="userName row">
   <div class="col-xs-12">
-    <p>Creator: {{ comment.user.username }}</p>
+    <p>Executor: {{ comment.user.username }}</p>
   </div>
 </div>
 <div class="topic row">
   <div class="col-xs-12">
-    <label for="">Topic: {{ comment.description }}</label>
+    <label for="">Topic: {{ comment.name }}</label>
   </div>
 </div>
 <div class="comment row">
