--- a/teamtrackfrontend/src/app/user-issues/user-comments-list/user-comments/user-comments.component.html
+++ b/teamtrackfrontend/src/app/user-issues/user-comments-list/user-comments/user-comments.component.html
@@ -7,7 +7,7 @@
       }}
       <th><span> | </span> Topic: <span> </span></th>
       {{
-        comment.description
+        comment.name
       }}
       <th><span> | </span>Prio: <span> </span></th>
       {{
