--- a/teamtrackfrontend/src/app/user-login/user-login.component.html
+++ b/teamtrackfrontend/src/app/user-login/user-login.component.html
@@ -23,9 +23,7 @@
       </div>
       <div [hidden]="!password.pristine" class="alert alert-danger">password is required</div>
       <button type="submit" [disabled]="!userForm.form.valid"
-        class="btn btn-success">Log in</button>
-      <!-- <button type="submit" (click) = "gotoSignUp()"
-        class="btn btn-info">Sign up</button> -->
+        class="btn btn-success w-25">Log in</button>
     </form>
   </div>
 </div>
