--- a/teamtrackfrontend/src/app/app.component.html
+++ b/teamtrackfrontend/src/app/app.component.html
@@ -10,6 +10,9 @@
             <li class="list-inline-item"><a routerLink="/login" class="btn btn-info">Login</a></li>
             <li class="list-inline-item"><a routerLink="/issues" class="btn btn-info">Issues</a></li>
             <li class="list-inline-item"><a routerLink="/projects" class="btn btn-info">Projects</a></li>
+            <li class="list-inline-item"><a routerLink="/groups" class="btn btn-info">Groups</a></li>
+
+            
           </ul>
         </div>
       </div>
