--- a/teamtrackfrontend/src/app/app.component.html
+++ b/teamtrackfrontend/src/app/app.component.html
@@ -14,6 +14,9 @@
 
             
           </ul>
+          <div class="text-white py-3" style="display: inline-block;">
+            <h2 >Currently selected project: {{showProjectName}} </h2>
+          </div>
         </div>
       </div>
     </div>
